# gold-rush

./: .gitignore  CMakeLists.txt  README.md  SquirrelGoldRush.sln  game.sln  idea.sln
enc_temp_folder/d356e229cf1d989d6d9b871484554f7/: main.cpp
game/: Camera.cpp  Camera.h  Game.filters  Game.vcxproj  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  game.aps  game.vcxproj  game.vcxproj.filters  main.cpp
game/Application/: Window.cpp  Window.h  glad.c
game/Debug/: game.exe.recipe  vc142.idb
game/Debug/game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  game.lastbuildstate
game/GUI/: imgui_demo.cpp  imgui_tables.cpp  imgui_widgets.cpp
game/Game/: Entity.cpp  Entity.h  Game.cpp  Player.cpp
game/Renderer/: Camera.h  Mesh.h  Model.cpp  Renderer.cpp  Shader.cpp  Shader.h  Skybox.cpp
game/Resources/Blender/: hazelnut.blend  (+1 more)
game/Terrain/: NoiseGenerator.cpp  TerrainGenerator.h
game/Types/: AABB.h  EMovement.h  EShader.h  ESkybox.h  ETexture.h
game/World/: QuadTree.cpp  QuadTree.h  TerrainElement.cpp
game/shaders/: fragment.frag  fragment.fs  fragment_light.frag  vertex.vert  vertex.vs  vertex_light.vert
idea/: Camera.cpp  Camera.h  ClassDiagram.cd  Engine.vcxproj  Engine.vcxproj.filters  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Window.cpp  Window.h  idea.vcxproj  idea.vcxproj.filters  imgui.ini  main.cpp
idea/Application/: Callbacks.h  Window.cpp  Window.h
idea/Buffers/: UniformBuffer.h
idea/GUI/: imgui_draw.cpp  imgui_impl_opengl3.cpp
idea/Game/: Entity.cpp  Entity.h  Game.cpp  Game.h  Player.cpp  Player.h  Prop.cpp  Prop.h
idea/Renderer/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h
idea/Terrain/: NoiseGenerator.cpp  NoiseGenerator.h  PerlinNoise.cpp  PerlinNoise.h  Terrain.cpp  Terrain.h  TerrainGenerator.cpp  TerrainGenerator.h
idea/Types/: AABB.h  ECamera.h  SBoundingBox.h
idea/World/: GObject.cpp  GObject.h  GQuadTree.cpp  GQuadTree.h  GTree.cpp  GTree.h  GWorld.cpp  GWorld.h  GameWorld.cpp  GameWorld.h  QuadTree.cpp  QuadTree.h  TerrainElement.cpp  TerrainElement.h
include/glad/: glad.h
libraries/: assimp  libGLEW.so.2.2.0
libs/: assimp-vc142-mtd.exp
src/: Main.cpp  imgui.ini
src/Application/: Window.cpp  Window.h  glad.c
src/Buffers/: UniformBuffer.h
src/GUI/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/Game/: Entity.cpp  Entity.h  Game.cpp  Game.h  Player.cpp  Player.h
src/Renderer/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h
src/Terrain/: NoiseGenerator.cpp  NoiseGenerator.h  Terrain.cpp  Terrain.h  TerrainGenerator.cpp  TerrainGenerator.h
src/Types/: AABB.h  EMovement.h  EShader.h  ETexture.h  FWindow.h
src/World/: GObject.cpp  GObject.h  GameWorld.cpp  GameWorld.h  QuadTree.cpp  QuadTree.h  TerrainElement.cpp  TerrainElement.h
x64/Debug/: game.ilk
(+106 files in other folders)
